feat: enhance OpenLibraryClient with author fetching and search capabilities